--- a/test.html
+++ b/test.html
@@ -23,7 +23,7 @@
 <body class="overflow">
 
   <!-- navbar -->
-  <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+  <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top navigation">
     <!-- brand logo -->
     <a class="navbar-brand" href="#"><img src="images/logo png.png" alt="Logo"></a>
     <!-- button for sm-screen -->
@@ -68,7 +68,7 @@
   </nav>
 
   <!-- content -->
-  <div class="container-fluid bg-black text-light p-0">
+  <div class="container-fluid bg-black text-light p-0 main-content">
     <!-- section #1 -->
     <div class="p-5">
       <div class="row p-4">
